# python-app

./: Dockerfile  app.py  database.py  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: deploy.yml
.github/works/: deploy.yml
controller/: contact_controllers.py
models/: contact_model.py
mongodb-docker/: docker-compose.yml
router/: contact_routes.py
services/: contact_services.py
templates/: home.html
templates/partials/: header.html
